Add BaseScannerEngine unit tests for configuration usage